shell-common: remove some clojure related bits
Leiningen or Boot is a better way to go here.